Implement the pretty string formatter